Фикс панели навигации, блоки текста инфографики

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -193,6 +193,10 @@ html, body {
 	background-color: #F1F4FB;
 }
 
+.info-text-block {
+	height: 500px;
+}
+
 .info-text-block-title {
 	text-align: center;
 	font-weight: 700;
