--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -762,6 +762,59 @@ html, body {
 	border-width: 0;
 }
 
+
+.sci-advisor-students-form {
+	margin-top: 34px;
+	margin-left: auto;
+    margin-right: auto;
+	width: 1440px;
+	display: block;
+}
+
+.sci-advisor-students-search-div {
+	display: inline-block;
+	width: 100%;
+	height: 88px;
+	margin-bottom: 10px;
+	border-radius: 7px;
+	padding: 10px 10px;
+}
+
+.sci-advisor-students-search {
+	margin-top: 0px;
+	width: 1238px;
+	border-radius: 7px;
+	border-width: 0;
+	height: 68px;
+	padding-left: 6px;
+	outline: none !important;
+    border: none !important;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+}
+
+.sci-advisor-students-search-button {
+	width: 172px;
+	height: 68px;
+	border-radius: 7px;
+	border-width: 0;
+	padding: 5px 5px;
+	margin-left: 1249px;
+	margin-top: -67px;
+	display: table;
+}
+
+.sci-advisor-students-search-button:hover, .sci-advisor-students-search-button:hover .icon-smaller {
+    background-color: #618FCA;
+}
+
+.sci-advisor-students-search-button:focus {
+    outline: none !important;
+    border: none !important;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+}
+
 /* Отступ снизу, размер футера */
 .wrapper {
 	min-height: 100vh;
