--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -694,6 +694,8 @@ html, body {
 	display: inline-block;
 	position: relative;
 	top: -2px;
+	padding-left: 15px;
+	padding-top: 8px;
 }
 
 .nir-version-titles {
@@ -703,11 +705,14 @@ html, body {
 	display: inline-block;
 	position: relative;
 	top: -2px;
+	
+	padding-left: 15px;
+	padding-top: 8px;
 }
 
 .nir-version-header-button {
 	position: relative;
-	top: 7px;
+	top: -2px;
 	margin-left: 5px;
 	padding: 0px 2px;
 	border-radius: 7px;
@@ -762,7 +767,6 @@ html, body {
 	border-width: 0;
 }
 
-
 .sci-advisor-students-form {
 	margin-top: 34px;
 	margin-left: auto;
@@ -813,6 +817,32 @@ html, body {
     border: none !important;
     -webkit-box-shadow: none !important;
     box-shadow: none !important;
+}
+
+.sci-advisor-status-dropdown-div {
+	position: relative;
+	display: inline-block;
+}
+  
+.sci-advisor-status-dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #f1f1f1;
+	min-width: 160px;
+	overflow: auto;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+}
+  
+.sci-advisor-status-dropdown-content p {
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+}
+  
+.sci-advisor-status-dropdown-content p:hover {
+	background-color: #ddd;
+	cursor: pointer;
 }
 
 /* Отступ снизу, размер футера */
