--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -971,3 +971,123 @@ html, body {
 .grey-background {
 	background-color: #95b0d2;
 }
+
+/* Для просмотра шаблонов и приказов*/
+.templatesPanel {
+	width: 1478px;
+	height: 758px;
+	/*background-color: #ce2a45;*/
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 20px;
+}
+
+.ordersPanel {
+	width: 1478px;
+	height: 758px;
+	/*background-color: #ce2a45;*/
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 20px;
+}
+
+.contentButton {
+	width: 362px;
+	height: 88px;
+	margin-right: 10px;
+	background: #89AFE0;
+	border-radius: 7px;
+	border-width: 0px;
+}
+
+.contentButton:hover {
+	background: #618FCA;
+}
+
+.contentPanel {
+	width: 1480px;
+	height: 660px;
+	background-color: #B2CAEE;
+	border-radius: 7px;
+	margin-top: 10px;
+}
+
+.template-doc-download {
+	width: 270px;
+	height: 90px;
+	position: relative;
+	top: -9px;
+	margin-left: 10px;
+	background-color: #89AFE0;;
+	border-radius: 7px;
+	border-width: 0px;
+}
+
+.template-doc-download:hover {
+	background: #618FCA;
+}
+
+.template-name {
+	display: inline-block;
+	width: 1180px;
+	height: 90px;
+	background-color: #89AFE0;
+	border-radius: 7px;
+	border-width: 0px;
+}
+
+.template-doc {
+	width: 1460px;
+	display: inline-block;
+	margin-left: 10px;
+	margin-top: 10px;
+}
+
+.template-name-image {
+	display:inline-block;
+}
+
+.template-name-text {
+	display:inline-block;
+	margin-left: 20px;
+}
+
+.order-doc-download {
+	width: 270px;
+	height: 90px;
+	position: relative;
+	top: 9px;
+	margin-left: 10px;
+	background-color: #89AFE0;;
+	border-radius: 7px;
+	border-width: 0px;
+}
+
+.order-doc-download:hover {
+	background: #618FCA;
+}
+
+.order-name {
+	display: inline-block;
+	width: 1180px;
+	height: 90px;
+	background-color: #89AFE0;
+	border-radius: 7px;
+	border-width: 0px;
+	margin-top: 10px;
+}
+
+.order-doc {
+	width: 1460px;
+	display: inline-block;
+	margin-left: 10px;
+}
+
+.order-name-image {
+	display:inline-block;
+}
+
+.order-name-text {
+	display:inline-block;
+	margin-left: 20px;
+}
