--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1012,6 +1012,10 @@ html, body {
 	margin-top: 10px;
 }
 
+.contentPanel-hidden {
+	display: none;
+}
+
 .template-doc-download {
 	width: 270px;
 	height: 90px;
